# PerfInst

./: CMakeLists.txt
include/: perfinst.h
src/: clock.h  extendedtimestamp.h  extendedtimestats.h  measurement.cpp  measurement.h  perfinst.cpp  queue.h  timestamp.h  timestamp_linux.cpp  timestamp_win.cpp  timestats.h
test/: main.c
